src/test/deca/test_compilateur/codegen/invalid/created/missing_return_float.deca
// Description :
//   pas de return alors que type non void demandé
//
// Resultats :
//		Erreur : sortie de la méthode sans return

class A{
float met2(){
}
}{
A a = new A();
a.met2();
}